# lgcns-mlops-practice

./: batch_prediction.py  drift_detection.py  pyproject.toml  service.py  train.py
artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
data/storage/: house_rent_feature.csv
notebooks/: online_serving.ipynb
predictions/: 20240808_rent_prediction.csv
src/: preprocess.py
src/common/: logger.py
