[project]
name = "lgcns-mlops-practice"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Goeun Lee", email = "goeunlee.st@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "matplotlib>=3.9.1.post1",
    "mypy>=1.11.1",
    "jupyter>=1.0.0",
]
