[project]
name = "lgcns-mlops-practice"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Goeun Lee", email = "goeunlee.st@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "bentoml>=1.3.1",
    "mlflow>=2.15.1",
    "seaborn>=0.13.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.1",
    "category-encoders>=2.6.3",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "matplotlib>=3.9.1.post1",
    "mypy>=1.11.1",
    "jupyter>=1.0.0",
    "pip>=24.2",
]
